--- a/index.css
+++ b/index.css
@@ -248,6 +248,7 @@
 .home-container06 {
   flex: 0 0 auto;
   width: 100%;
+  height: 600px;
   display: flex;
   align-self: stretch;
   align-items: flex-start;
@@ -274,7 +275,7 @@
   min-width: 366px;
   align-self: center;
   max-height: 500px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .home-container08 {
   flex: 0 0 auto;
@@ -716,7 +717,7 @@
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
-@media(max-width: 760px) {
+@media(max-width: 459px) {
   .home-navbar-interactive {
     padding: var(--dl-space-space-unit);
   }
@@ -758,10 +759,13 @@
     flex-direction: row;
   }
   .home-container07 {
+    flex: 1;
+    height: auto;
     align-self: stretch;
   }
   .home-image1 {
-    right: -80px;
+    right: 0px;
+    position: static;
   }
   .home-container08 {
     background-color: transparent;
