--- a/index.css
+++ b/index.css
@@ -222,7 +222,7 @@
   width: 50%;
   height: 600px;
   display: flex;
-  min-width: 350px;
+  min-width: 365px;
   align-self: stretch;
   align-items: center;
   justify-content: center;
@@ -231,7 +231,7 @@
   width: auto;
   min-width: 366px;
   max-height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .home-teaching {
   flex: 0 0 auto;
@@ -248,7 +248,7 @@
 .home-container06 {
   flex: 0 0 auto;
   width: 100%;
-  height: 600px;
+  height: auto;
   display: flex;
   align-self: stretch;
   align-items: flex-start;
@@ -260,21 +260,16 @@
   height: 600px;
   display: flex;
   position: relative;
-  min-width: 390px;
+  min-width: 370px;
   align-self: stretch;
   align-items: center;
   justify-content: center;
 }
 .home-image1 {
-  top: 0px;
-  right: 0px;
   width: auto;
-  bottom: 0px;
-  margin: auto;
-  position: absolute;
   min-width: 366px;
   align-self: center;
-  max-height: 500px;
+  max-height: 450px;
   object-fit: contain;
 }
 .home-container08 {
@@ -412,7 +407,7 @@
   width: 50%;
   height: 600px;
   display: flex;
-  min-width: 390px;
+  min-width: 370px;
   align-self: stretch;
   align-items: center;
   justify-content: center;
@@ -421,7 +416,7 @@
   width: auto;
   min-width: 366px;
   max-height: 600px;
-  object-fit: cover;
+  object-fit: contain;
 }
 .home-gallery {
   flex: 0 0 auto;
@@ -678,9 +673,15 @@
     padding-left: 0px;
     padding-right: 0px;
   }
+  .home-container07 {
+    min-width: 365px;
+  }
   .home-image1 {
     order: 1;
-    right: -40px;
+    right: 0px;
+  }
+  .home-container13 {
+    min-width: 365px;
   }
   .home-container16 {
     height: auto;
@@ -717,7 +718,7 @@
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
 }
-@media(max-width: 459px) {
+@media(max-width: 730px) {
   .home-navbar-interactive {
     padding: var(--dl-space-space-unit);
   }
@@ -737,6 +738,7 @@
   }
   .home-container03 {
     order: 2;
+    width: 80%;
     height: auto;
   }
   .home-container04 {
@@ -768,6 +770,7 @@
     position: static;
   }
   .home-container08 {
+    width: 80%;
     background-color: transparent;
   }
   .home-container09 {
@@ -778,6 +781,8 @@
   }
   .home-text13 {
     color: var(--dl-color-gray-700);
+    padding: var(--dl-space-space-unit);
+    margin-top: 0px;
     font-family: Raleway;
   }
   .home-contact {
@@ -788,6 +793,7 @@
   }
   .home-container11 {
     order: 2;
+    width: 80%;
     height: auto;
   }
   .home-container12 {
