--- a/index.css
+++ b/index.css
@@ -192,7 +192,7 @@
   align-items: flex-start;
   justify-content: center;
 }
-.home-container03 {
+.home-text-container {
   flex: 0 0 auto;
   width: 50%;
   height: 600px;
@@ -200,7 +200,7 @@
   align-items: flex-start;
   justify-content: center;
 }
-.home-container04 {
+.home-container03 {
   flex: 0 0 auto;
   width: 80%;
   display: flex;
@@ -217,7 +217,7 @@
   text-align: justify;
   font-family: Raleway;
 }
-.home-container05 {
+.home-image-container {
   flex: 0 0 auto;
   width: 50%;
   height: 600px;
@@ -230,6 +230,7 @@
 .home-image {
   width: auto;
   min-width: 366px;
+  align-self: flex-end;
   max-height: 600px;
   object-fit: contain;
 }
@@ -239,54 +240,49 @@
   display: flex;
   align-items: flex-start;
   padding-top: 0px;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding-left: var(--dl-space-space-threeunits);
+  padding-right: var(--dl-space-space-threeunits);
   padding-bottom: 0px;
   justify-content: center;
   background-color: #020000;
 }
-.home-container06 {
+.home-container04 {
   flex: 0 0 auto;
   width: 100%;
-  height: auto;
   display: flex;
   align-self: stretch;
   align-items: flex-start;
   justify-content: center;
 }
-.home-container07 {
+.home-image-container1 {
   flex: 0 0 auto;
   width: 50%;
   height: 600px;
   display: flex;
   position: relative;
-  min-width: 370px;
+  min-width: 365px;
   align-self: stretch;
   align-items: center;
   justify-content: center;
 }
 .home-image1 {
   width: auto;
-  min-width: 366px;
+  min-width: 365px;
   align-self: center;
   max-height: 450px;
-  object-fit: contain;
+  object-fit: cover;
 }
-.home-container08 {
+.home-text-container1 {
   flex: 0 0 auto;
   width: 50%;
   height: 600px;
   display: flex;
-  align-self: stretch;
+  padding: 0px;
   align-items: center;
-  padding-top: 0px;
-  padding-left: var(--dl-space-space-unit);
-  padding-right: var(--dl-space-space-unit);
   flex-direction: column;
-  padding-bottom: 0px;
   justify-content: center;
 }
-.home-container09 {
+.home-container05 {
   flex: 0 0 auto;
   width: 80%;
   height: 100%;
@@ -335,7 +331,7 @@
   padding-bottom: 0px;
   justify-content: center;
 }
-.home-container10 {
+.home-container06 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -344,7 +340,7 @@
   align-items: flex-start;
   justify-content: center;
 }
-.home-container11 {
+.home-container07 {
   flex: 0 0 auto;
   width: 50%;
   height: 600px;
@@ -352,7 +348,7 @@
   align-items: flex-start;
   justify-content: center;
 }
-.home-container12 {
+.home-container08 {
   flex: 0 0 auto;
   width: 80%;
   display: flex;
@@ -402,7 +398,7 @@
   margin-top: var(--dl-space-space-unit);
   font-family: Raleway;
 }
-.home-container13 {
+.home-container09 {
   flex: 0 0 auto;
   width: 50%;
   height: 600px;
@@ -415,6 +411,7 @@
 .home-image2 {
   width: auto;
   min-width: 366px;
+  align-self: flex-end;
   max-height: 600px;
   object-fit: contain;
 }
@@ -429,10 +426,11 @@
   padding-right: var(--dl-space-space-threeunits);
   padding-bottom: 0px;
   justify-content: center;
+  background-color: #000000;
 }
-.home-container14 {
+.home-container10 {
   flex: 0 0 auto;
-  width: 100%;
+  width: 80%;
   display: flex;
   position: relative;
   flex-wrap: wrap;
@@ -441,8 +439,10 @@
   padding-top: 0px;
   flex-direction: row;
   justify-content: center;
+  background-color: rgba(153, 153, 153, 0.3);
 }
 .home-heading1 {
+  color: var(--dl-color-gray-900);
   font-size: 32px;
   font-style: normal;
   font-family: Cormorant Garamond;
@@ -451,7 +451,7 @@
   padding-bottom: var(--dl-space-space-twounits);
   text-transform: uppercase;
 }
-.home-container15 {
+.home-container11 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -459,7 +459,7 @@
   align-items: flex-start;
   justify-content: center;
 }
-.home-container16 {
+.home-container12 {
   flex: 0 0 auto;
   width: 400px;
   margin: var(--dl-space-space-unit);
@@ -472,7 +472,7 @@
   margin: 0px;
   object-fit: cover;
 }
-.home-container17 {
+.home-container13 {
   flex: 0 0 auto;
   width: 400px;
   margin: var(--dl-space-space-unit);
@@ -487,7 +487,7 @@
   max-height: 400px;
   object-fit: cover;
 }
-.home-container18 {
+.home-container14 {
   flex: 0 0 auto;
   width: 400px;
   margin: var(--dl-space-space-unit);
@@ -500,7 +500,7 @@
   margin: 0px;
   object-fit: cover;
 }
-.home-container19 {
+.home-container15 {
   flex: 0 0 auto;
   width: 400px;
   margin: var(--dl-space-space-unit);
@@ -528,7 +528,7 @@
   padding-bottom: var(--dl-space-space-twounits);
   justify-content: space-between;
 }
-.home-container20 {
+.home-container16 {
   display: flex;
   max-width: var(--dl-size-size-maxwidth);
   align-items: center;
@@ -588,7 +588,7 @@
   border-left-width: 0px;
   border-right-width: 0px;
 }
-.home-container21 {
+.home-container17 {
   flex: 0 0 auto;
   width: 100%;
   display: flex;
@@ -604,7 +604,7 @@
     flex: 1;
     max-width: 90%;
   }
-  .home-container08 {
+  .home-text-container1 {
     flex-direction: column;
   }
   .home-image2 {
@@ -673,29 +673,29 @@
     padding-left: 0px;
     padding-right: 0px;
   }
-  .home-container07 {
+  .home-image-container1 {
     min-width: 365px;
   }
   .home-image1 {
     order: 1;
     right: 0px;
   }
-  .home-container13 {
+  .home-container09 {
     min-width: 365px;
   }
-  .home-container16 {
+  .home-container12 {
     height: auto;
     max-height: 400px;
   }
-  .home-container17 {
+  .home-container13 {
     height: auto;
     max-height: 400px;
   }
-  .home-container18 {
+  .home-container14 {
     height: auto;
     max-height: 400px;
   }
-  .home-container19 {
+  .home-container15 {
     height: auto;
     max-height: 400px;
   }
@@ -709,7 +709,7 @@
     margin-right: 0px;
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
-  .home-container21 {
+  .home-container17 {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
@@ -736,16 +736,19 @@
   .home-container02 {
     flex-wrap: wrap;
   }
-  .home-container03 {
+  .home-text-container {
     order: 2;
     width: 80%;
     height: auto;
   }
-  .home-container04 {
+  .home-container03 {
     align-self: flex-start;
     background-color: transparent;
   }
-  .home-container05 {
+  .home-text04 {
+    font-family: Raleway;
+  }
+  .home-image-container {
     order: 1;
     height: auto;
     min-height: 100px;
@@ -756,11 +759,17 @@
   .home-image {
     position: static;
   }
-  .home-container06 {
+  .home-teaching {
+    padding-top: 0px;
+    padding-left: var(--dl-space-space-threeunits);
+    padding-right: var(--dl-space-space-threeunits);
+    padding-bottom: 0px;
+  }
+  .home-container04 {
     flex-wrap: wrap;
     flex-direction: row;
   }
-  .home-container07 {
+  .home-image-container1 {
     flex: 1;
     height: auto;
     align-self: stretch;
@@ -768,12 +777,16 @@
   .home-image1 {
     right: 0px;
     position: static;
+    max-width: 90%;
+    min-width: 365px;
   }
-  .home-container08 {
+  .home-text-container1 {
     width: 80%;
+    height: auto;
     background-color: transparent;
   }
-  .home-container09 {
+  .home-container05 {
+    height: 100%;
     background-color: transparent;
   }
   .home-text12 {
@@ -781,27 +794,25 @@
   }
   .home-text13 {
     color: var(--dl-color-gray-700);
-    padding: var(--dl-space-space-unit);
-    margin-top: 0px;
     font-family: Raleway;
   }
   .home-contact {
     height: auto;
   }
-  .home-container10 {
+  .home-container06 {
     flex-wrap: wrap;
   }
-  .home-container11 {
+  .home-container07 {
     order: 2;
     width: 80%;
     height: auto;
   }
-  .home-container12 {
+  .home-container08 {
     align-self: flex-start;
     flex-direction: column;
     background-color: transparent;
   }
-  .home-container13 {
+  .home-container09 {
     order: 1;
     height: auto;
     min-height: 100px;
@@ -814,8 +825,9 @@
   }
   .home-gallery {
     height: auto;
+    background-color: #000000;
   }
-  .home-container14 {
+  .home-container10 {
     flex-wrap: wrap;
   }
   .home-footer {
@@ -825,7 +837,7 @@
     margin-top: var(--dl-space-space-oneandhalfunits);
     margin-bottom: var(--dl-space-space-oneandhalfunits);
   }
-  .home-container21 {
+  .home-container17 {
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
